cargo-public-api/tests/snapshots/cargo_public_api_bin_tests__diff-latest.snap
---
source: cargo-public-api/tests/cargo-public-api-bin-tests.rs
expression: stdout
---
Removed items from the public API
=================================
(none)

Changed items in the public API
===============================
(none)

Added items to the public API
=============================
+pub struct example_api::AddedSinceLatest
