cargo-public-api/tests/snapshots/cargo_public_api_bin_tests__example_api-v0.3.0_document-private-items.snap
---
source: cargo-public-api/tests/cargo-public-api-bin-tests.rs
expression: stdout
---
pub mod example_api
#[non_exhaustive] pub struct example_api::Struct
pub example_api::Struct::v1_field: usize
pub example_api::Struct::v2_field: usize
impl core::fmt::Debug for example_api::Struct
pub fn example_api::Struct::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
pub struct example_api::StructV2
pub example_api::StructV2::field: usize
pub example_api::StructV2::private_field: usize
