cargo-public-api/tests/snapshots/cargo_public_api_bin_tests__example_api_diff_v0.1.0_to_v0.2.0.snap
---
source: cargo-public-api/tests/cargo-public-api-bin-tests.rs
expression: stdout
---
Removed items from the public API
=================================
(none)

Changed items in the public API
===============================
-pub struct example_api::Struct
+#[non_exhaustive] pub struct example_api::Struct
-pub fn example_api::function(v1_param: example_api::Struct)
+pub fn example_api::function(v1_param: example_api::Struct, v2_param: usize)

Added items to the public API
=============================
+pub example_api::Struct::v2_field: usize
+pub struct example_api::StructV2
+pub example_api::StructV2::field: usize
