cargo-public-api/tests/snapshots/cargo_public_api_bin_tests__example_api_diff_v0.2.0_to_v0.3.0.snap
---
source: cargo-public-api/tests/cargo-public-api-bin-tests.rs
expression: stdout
---
Removed items from the public API
=================================
-pub fn example_api::function(v1_param: example_api::Struct, v2_param: usize)

Changed items in the public API
===============================
(none)

Added items to the public API
=============================
(none)
